# hello-world-static-lib

./: CMakeLists.txt  LICENSE  README.md
include/: hello-static-lib.h
src/: hello-static-lib.cpp  hello_static_lib.cpp
